fix icon color be invisible with Themed disabled

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -5,8 +5,8 @@
   --deeplib-element-hover-color: var(--tmd-element-hover, cyan);
   --deeplib-blocked-color: var(--tmd-blocked, red);
   --deeplib-text-color: var(--tmd-text, black);
-  --deeplib-icon-color: var(--tmd-accent, white);
-  --deeplib-icon-hover-color: var(--tmd-accent-hover, cyan);
+  --deeplib-icon-color: var(--tmd-accent, black);
+  --deeplib-icon-hover-color: var(--tmd-accent-hover, black);
   --deeplib-border-color: var(--tmd-accent, black);
   --deeplib-border-width: min(0.2vh, 0.1vw);
   --deeplib-border-width: min(0.2dvh, 0.1dvw);
